--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/halo123u/note-app/issues"
   },
-  "homepage": "https://github.com/halo123u/note-app#readme"
+  "homepage": "https://github.com/halo123u/note-app#readme",
+  "dependencies": {
+    "lodash": "^4.17.4",
+    "yargs": "^7.0.2"
+  }
 }
